placed stage and opening correctly behind proscenium

--- a/src/pages/teater/teater-page.scss
+++ b/src/pages/teater/teater-page.scss
@@ -48,7 +48,7 @@
 
   .stage-opening-container {
     position: absolute;
-    top: 26.5vw;
+    top: 42.5%;
     width: 69%;
     display: inline-block;
     transform: translateZ(-0.2px);
